StatefulSet/set-service.yml
apiVersion: v1
kind: Service
metadata:
  name: set-service
spec:
  clusterIP: None
  selector:
    app: k8s-env
    env: development
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
