StatefulSet/set-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: set-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: set-service
          servicePort: 5000
